# github-release-fetcher

./: .coverage  .flake8  .gitignore  LICENSE  README.md  latest.json  mypy.ini  noxfile.py  pyproject.toml
.github/: CODEOWNERS  dependabot.yaml  release-drafter.yml
.github/workflows/: codeql-analysis.yml  constraints.txt  coverage.yaml  main.yaml  release-drafter.yaml
config/: projects.json
github_release_fetcher/: __init__.py  github.py  release.py
src/github_release_fetcher/: console.py  github.py  release.py
tests/: __init__.py  conftest.py  console_test.py  github_test.py  test_data.py
