[tool.poetry]
name = "github-release-fetcher"
version = "0.1.0"
description = "Tool to fetch releases from Github"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/pziggo/github-release-fetcher"
repository = "https://github.com/pziggo/github-release-fetcher"
keywords = ["github"]
authors = ["Patrick Ziegler <ziggo@zaebos.de>"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^8.1.3"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
pytest-cov = "^3.0.0"
pytest-mock = "^3.8.2"
flake8-bandit = "^4.1.1"
flake8-black = "^0.3.3"
flake8-bugbear = "^22.9.23"
flake8-import-order = "^0.18.1"
safety = "^2.2.0"
mypy = "^0.971"
flake8-annotations = "^2.9.1"
typeguard = "^2.13.3"
flake8-docstrings = "^1.5.0"
darglint = "^1.8.1"
xdoctest = "^1.1.0"
pep8-naming = "^0.13.2"
types-requests = "^2.28.10"
types-click = "^7.1.8"

[tool.poetry.scripts]
github-release-fetcher = "github_release_fetcher.console:main"

[tool.coverage.paths]
source = ["src", "*./site-packages"]

[tool.coverage.run]
branch = true
source = ["github_release_fetcher"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
