[tool.poetry]
name = "github-release-fetcher"
version = "0.1.0"
description = "Tool to fetch releases from Github"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/pziggo/github-release-fetcher"
repository = "https://github.com/pziggo/github-release-fetcher"
keywords = ["github"]
authors = ["Patrick Ziegler <ziggo@zaebos.de>"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^8.1.3"
requests = "^2.30.0"

[tool.poetry.dev-dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.0.0"
pytest-mock = "^3.10.0"
flake8-bandit = "^4.1.1"
flake8-black = "^0.3.6"
flake8-bugbear = "^23.2.13"
flake8-import-order = "^0.18.2"
safety = "^2.3.5"
mypy = "^1.3"
flake8-annotations = "^2.9.1"
typeguard = "^2.13.3"
flake8-docstrings = "^1.7.0"
darglint = "^1.8.1"
xdoctest = "^1.1.1"
pep8-naming = "^0.13.3"
types-requests = "^2.30.0"
types-click = "^7.1.8"

[tool.poetry.scripts]
github-release-fetcher = "github_release_fetcher.console:main"

[tool.coverage.paths]
source = ["src", "*./site-packages"]

[tool.coverage.run]
branch = true
source = ["github_release_fetcher"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
